[package]
name = "prometheus-ddwrt-exporter"
version = "0.1.0"
edition = "2021"
author = "Andriy Zasypkin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.12", features = ["cargo", "env"] }
itertools = "0.10.3"
lazy_static = "1.4.0"
prometheus = "0.13.1"
prometheus_exporter = "0.8.4"
regex = "1.6.0"
reqwest = {version = "0.11.11", features = ["blocking"]}
